# voteview-dev

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  dev-requirements.in  dev-requirements.txt  pycli  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
changelog.d/: 2.change
ci/: appveyor-download.py
docs/: changelog.rst  conf.py  index.rst  installation.rst  prerequisites.rst  requirements.txt  usage.rst
docs/reference/: index.rst  modules.rst  vvcli.rst  vvtool.migrations.data.rst  vvtool.migrations.rst  vvtool.rst
examples/: update_bio.py
src/vvcli/: __main__.py  app.py  cli.py  exceptions.py  utils.py
src/vvtool/: __init__.py  __main__.py  app.py  application.py  cli.py  documents.py  exceptions.py  manager.py
src/vvtool/migrations/: 0001_trump.py
src/vvtool/migrations/data/: initial_trump_data.xlsx  initial_trump_votes.csv
tests/: config.py  conftest.py  helpers.py  test_cli.py  test_vvcli.py  test_vvtool.py
tests/data/: members.json  persons.json  rollcalls.json
tests/test_migrations/: test_initial_trump_votes.py
